--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"main": "index.js",
 	"scripts": {
 		"build": "webpack",
-		"dev": "webpack serve"
+		"dev": "webpack serve",
+		"prod": "webpack --node-env=production"
 	},
 	"keywords": [],
 	"author": "",
